@@ -1,6 +1,6 @@
 Package: car
-Version: 3.1-4
-Date: 2024-10-28
+Version: 3.1-5
+Date: 2025-05014
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
