@@ -1,5 +1,7 @@
 Changes to Version 3.1-4
 
+  o Fixed bugs in powerTransformation using the bcnPower family.  New results may differ slightly from former results.
+  
   o Fix bug in logit() (reported and fixed by Iain Proctor)
 
 Changes to Version 3.1-3
